[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "demapi"
version = "0.1.6"
description = "Make customizable demotivators and motivators through imgonline.com.ua API. Supports async-await style"
authors = ["Yan Kurbatov <deknowny@gmail.com>"]
license = "MIT"
homepage = "https://github.com/deknowny/demapi"
documentation = "https://github.com/deknowny/demapi/blob/main/GUIDE.md"
readme = "README.md"
keywords = [
    "demotivators", "imgonline", "async", "await", "aio"
]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
aiohttp = "^3.8.1"
certifi = "^2021.10.8"

# --dev --
# Place dev dependencies here bacause
# Dev dependencies does not support `extras`.
# So if you use `mypy` as dev dependencies
# And run tests on `pypy`, you will see an error.
# That means some libs are not supported on some python
# Implementations
black = {optional = true, version="^21.11b1"}
isort = {optional = true, version="^5.10.1"}
pre-commit = {optional = true, version="^2.15.0"}
pytest-cov = {optional = true, version="^3.0.0"}
coveralls = {optional = true, version="^3.3.1"}
coverage = {optional = true, version="^6.1.2"}
pytest-asyncio = {optional = true, version="^0.16.0"}
pytest = {optional = true, version="^6.2.5"}
mypy = {optional = true, version="^0.910"}
types-requests = {optional = true, version="^2.26.1"}
types-certifi = {optional = true, version="^2021.10.8"}

[tool.poetry.extras]
style = ["black", "isort", "pre-commit"]
test = ["pytest", "pytest-asyncio", "pytest-cov", "coveralls", "coverage"]
check = ["mypy", "types-requests", "types-certifi"]

[tool.black]
line-length = 78

[tool.isort]
profile = "wemake"
src_paths = ["demapi", "tests"]
line_length = 78
